<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <!--Top header-->
    <RelativeLayout
        android:id="@+id/relativelayout_report"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="0.25"
        android:background="@color/style_color_primary"
        >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </RelativeLayout>

    <!--Style for Login page-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="366dp"
            android:layout_height="139dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
        <!-- username tag-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="Roboto"
            android:textColor="@color/style_color_primary"
            android:textSize="20sp"/>
        <!-- username edit area-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:id="@+id/editTextLogin"
            android:layout_gravity="center_horizontal" />
        <!-- password tag-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:textColor="@color/style_color_primary"
            android:text="@string/password" />
        <!-- password edit area-->
        <EditText
            android:fontFamily="Roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal" />
        <!-- button to login-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="Roboto"
            android:textColor="@android:color/white"
            android:background="@drawable/login_buttons"
            android:id="@+id/submit" />
        <!-- button to register-->
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:background="@drawable/login_buttons"
            android:fontFamily="Roboto" />

    </LinearLayout>
    <!--For admob-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

</LinearLayout>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/fragment_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="horizontal"-->
    <!--tools:context="site.shawnxxy.eventreporter.activity.MainActivity">-->

    <!--<RelativeLayout-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/event_container">-->
    <!--</RelativeLayout>-->

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/comment_container">-->
    <!--</RelativeLayout>-->

    <!--&lt;!&ndash;<ListView android:id="@+id/event_list"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="match_parent">&ndash;&gt;-->
    <!--&lt;!&ndash;</ListView>&ndash;&gt;-->

    <!--&lt;!&ndash;<fragment android:name="site.shawnxxy.eventreporter.fragments.EventFragment"&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/event_fragment"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="match_parent">&ndash;&gt;-->
    <!--&lt;!&ndash;</fragment>&ndash;&gt;-->

<!--</LinearLayout>-->

    <!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="site.shawnxxy.eventreporter.activity.MainActivity">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->
    <!---->
<!--</android.support.constraint.ConstraintLayout>-->
